info user and edit

--- a/src/views/_layouts/main.hbs
+++ b/src/views/_layouts/main.hbs
@@ -109,7 +109,7 @@ background-color: rgb(222, 223, 224);
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="SuccessBidder.html">Purchase Order</a>
                             <a class="dropdown-item" href="SuccessSeller.html">Sales Order</a>
-                            <a class="dropdown-item" href="EditInformation.html">Edit Information</a>
+                            <a class="dropdown-item" href="/user/information">Information</a>
             {{!-- <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> --}}                            
                             <a class="dropdown-item" href="home_login.html">Log out</a>
                         </div>
