them delete ra khoi watchlist

--- a/src/views/_layouts/main.hbs
+++ b/src/views/_layouts/main.hbs
@@ -95,7 +95,7 @@ background-color: rgb(222, 223, 224);
                 <ul class="navbar-nav ml-auto flex-nowrap">
                 {{#if isAuthenticated}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/{{authUser.UserID}}/watchlist"><i class="fa fa-star"></i>Watch list</a>
+                        <a class="nav-link" href="/user/watchlist"><i class="fa fa-star"></i>Watch list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sell.html">Sell</a>
