dan link qua chi tiet sp watchlist, bidding list, add va xoa khoi watchlist

--- a/src/views/vwAboutUser/wonlist.hbs
+++ b/src/views/vwAboutUser/wonlist.hbs
@@ -1,6 +1,6 @@
 <div class="card shadow">
   <h4 class="card-header">
-    <a style="color: #8AD8CE;">Watch List</a>
+    <a style="color: #8AD8CE;">Won List</a>
     <!--Search-->
     <form class="form-inline " action="/user/watchlist/search" method="POST" style="float: right;">
       <input class="form-control rounded-0" type="search" placeholder="Search" id="inputSearchWL" name="inputSearchWL">
