--- a/src/views/_layouts/main.hbs
+++ b/src/views/_layouts/main.hbs
@@ -107,8 +107,8 @@ background-color: rgb(222, 223, 224);
                             <i class="fa fa-user-circle"></i>Hi,<b>{{authUser.UserName}}!</b>
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="SuccessBidder.html">Purchase Order</a>
-                            <a class="dropdown-item" href="SuccessSeller.html">Sales Order</a>
+                            <a class="dropdown-item" href="/user/biddinglist">Bidding List</a>
+                            <a class="dropdown-item" href="SuccessSeller.html">Won List</a>
                             <a class="dropdown-item" href="/user/information">Information</a>
             {{!-- <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> --}}                            
                             <a class="dropdown-item" href="home_login.html">Log out</a>
