--- a/src/views/vwAboutUser/biddinglist.hbs
+++ b/src/views/vwAboutUser/biddinglist.hbs
@@ -19,6 +19,7 @@
   {{else}}
   <table class="table table-hover">
     <thead>
+
       <tr>
         <th scope="col" class="text-center">ProductID</th>
         <th scope="col">CateID</th>
@@ -30,17 +31,19 @@
         <th scope="col">Start Price</th>
         <th scope="col">BIN</th>
         <th scope="col">Step</th>
-       
+
         </th>
       </tr>
+      </a>
     </thead>
     <tbody>
       {{#each this.categories}}
 
-      <tr ">
-        <th scope="row" class="text-center">{{ProductID}}</th>
+      <tr>
+        <th scope="row" class="text-center"><a href="/categories/products/2" style="color: black;"> {{ProductID}} </a></th>
+        
         <td>{{CateID}}</td>
-        <td>{{NameProduct}}</td>
+        <td> <a href="/categories/products/2"  style="color: black;">{{NameProduct}} </a></td>
         <td>{{Descript}}</td>
         <td>{{BuyDate}}</td>
         <td>{{EndDate}}</td>
@@ -48,13 +51,8 @@
         <td>{{StartPricce}}</td>
         <td>{{BIN}}</td>
         <td>{{Step}}</td>
-        {{!-- <td>
-          <form class="form-inline " action="/user/1/watchlist/delete" method="POST">
-            <button type="submit" class="btn btn-outline-danger">
-              <i class="fa fa-star" aria-hidden="true"></i>
-            </button>
-          </form>
-        </td> --}}
+
+
       </tr>
 
 
