--- a/src/views/vwProducts/allByCat.hbs
+++ b/src/views/vwProducts/allByCat.hbs
@@ -10,21 +10,37 @@
     </p>
   </div>
   {{else}}
-  <div class="card-body" >
+  <div class="card-body">
     <div class="row">
       {{#each this.products}}
       <div class="col-sm-3 mb-3">
-        <div class="card h-100" >
-          <img src="/imgs/sp/{{ProductID}}/main_thumbs.jpg" alt="{{NameProduct}}" title="{{NameProduct}}" class="card-img-top">
-          <div class="card-body" >
-            <a href='#' class="cus_brand text-dark"><h6 class="card-title"  >{{NameProduct}}</h6></a>
+        <div class="card h-100">
+          <img src="/imgs/sp/{{ProductID}}/main_thumbs.jpg" alt="{{NameProduct}}" title="{{NameProduct}}"
+            class="card-img-top">
+          <div class="card-body">
+            <a href='#' class="cus_brand text-dark">
+              <h6 class="card-title">{{NameProduct}}</h6>
+            </a>
+
             <h5 class="card-title text-danger">Current Price: {{format StartPricce}}</h5>
-            <a class="card-title text-warning">Buy It Now: {{format BIN}}</a>
+            <p class="card-title text-warning">Buy It Now: {{format BIN}}</p>
+            <div class="text-center">
+
+              <a class="btn btn-outline-success text-center" href="/categories/{{CateID}}/products/addwl?ProductId={{ProductID}}">
+                {{#if check}}
+                <i class="fa fa-star" aria-hidden="true"></i>
+                {{else}}
+                <i class="fa fa-check" aria-hidden="true"></i>
+                {{/if}}
+              </a>
+
+              {{!-- </form> --}}
+            </div>
           </div>
         </div>
       </div>
       {{/each}}
-      </div>
+    </div>
     <div class="row">
       <div class="col-sm-12">
         <nav>
