--- a/src/views/_layouts/main.hbs
+++ b/src/views/_layouts/main.hbs
@@ -108,7 +108,7 @@ background-color: rgb(222, 223, 224);
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="/user/biddinglist">Bidding List</a>
-                            <a class="dropdown-item" href="SuccessSeller.html">Won List</a>
+                            <a class="dropdown-item" href="/user/wonlist">Won List</a>
                             <a class="dropdown-item" href="/user/information">Information</a>
             {{!-- <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> --}}                            
                             <a class="dropdown-item" href="home_login.html">Log out</a>
