--- a/src/views/vwProducts/allByCat.hbs
+++ b/src/views/vwProducts/allByCat.hbs
@@ -18,11 +18,11 @@
           <img src="/imgs/sp/{{ProductID}}/main_thumbs.jpg" alt="{{NameProduct}}" title="{{NameProduct}}"
             class="card-img-top">
           <div class="card-body">
-            <a href='#' class="cus_brand text-dark">
+            <a href='/categories/products/{{ProductID}}' class="cus_brand text-dark">
               <h6 class="card-title">{{NameProduct}}</h6>
             </a>
 
-            <h5 class="card-title text-danger">Current Price: {{format StartPricce}}</h5>
+            <h5 class="card-title text-danger">Start Price: {{format StartPricce}}</h5>
             <p class="card-title text-warning">Buy It Now: {{format BIN}}</p>
             <div class="text-center">
 
