--- a/src/views/_layouts/main.hbs
+++ b/src/views/_layouts/main.hbs
@@ -98,7 +98,7 @@ background-color: rgb(222, 223, 224);
                         <a class="nav-link" href="/user/watchlist"><i class="fa fa-star"></i>Watch list</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sell/upload">Sell</a>
+                        <a class="nav-link" href="sell.html">Sell</a>
                     </li>
       {{!-- Dropdown My Product --}}
                    <li class="nav-item dropdown">
