--- a/src/views/vwProducts/detail.hbs
+++ b/src/views/vwProducts/detail.hbs
@@ -118,35 +118,52 @@
             <form id="frmLogout" method="post" action="/account/logout"></form>
             <div class="collapse navbar-collapse flex-grow-1 text-right">
                 <ul class="navbar-nav ml-auto flex-nowrap">
-                    {{#if isAuthenticated}}
+                {{#if isAuthenticated}}
                     <li class="nav-item">
-                        <a class="nav-link" href="WatchList.html"><i class="fa fa-star"></i>Watch list</a>
+                        <a class="nav-link" href="/user/watchlist"><i class="fa fa-star"></i>Watch list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sell.html">Sell</a>
                     </li>
+      {{!-- Dropdown My Product --}}
+                   <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+              <i class="fa fa-cart-plus"></i>My Product</b>
+            </a>
+            <div class="dropdown-menu">
 
-                    <!-- Dropdown -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-                            <i class="fa fa-user-circle"></i>Hi,<b>{{authUser.UserName}}!</b>
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="SuccessBidder.html">Purchase Order</a>
-                            <a class="dropdown-item" href="SuccessSeller.html">Sales Order</a>
-                            <a class="dropdown-item" href="EditInformation.html">Edit Information</a>
-                            {{!-- <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> --}}
-                            <a class="dropdown-item" href="home_login.html">Log out</a>
-                        </div>
-                    </li>
-                    {{else}}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/account/register">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/account/login">Login</a>
-                    </li>
-                    {{/if}}
+              <a class="dropdown-item" href="/user/biddinglist">Bidding List</a>
+              <a class="dropdown-item" href="/user/wonlist">Won List</a>
+
+            </div>
+          </li>
+     
+       
+   
+          <!-- Dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+              <i class="fa fa-user-circle"></i>Hi,&ensp;<b>{{authUser.UserName}}!</b>
+            </a>
+           
+             <div class="dropdown-menu">
+                 {{!-- {{#if authUser.TypeUser === 1}} --}}   
+              <a class="dropdown-item" href="/user/selling">Selling</a>
+              <a class="dropdown-item" href="/user/sold">SOLD</a>
+               {{!-- {{/if}} --}}
+              <a class="dropdown-item" href="/user/information">Information</a>
+              {{!-- <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> --}}
+              <a class="dropdown-item" href="home_login.html">Log out</a>
+            </div>
+          </li>
+                     {{else}}
+        <li class="nav-item">
+          <a class="nav-link" href="/account/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/account/login">Login</a>
+        </li>
+        {{/if}}
                 </ul>
 
             </div>
@@ -154,6 +171,9 @@
     </nav>
 
     </br>
+   
+
+  <form method="POST">
     <div class="modal" id="myModal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -163,27 +183,29 @@
                     <h4 class="modal-title">BID</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-
+    
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form>
+                
 
-                        <p> <label for="bid">Bid Amount </label> <input type="text" id="bid" name="bid"
-                                placeholder="bid" style="margin-left: 30px;"></p>
-                        <p>Min Amount:<a style="color:#8AD8CE; font-size:20px">&ensp; 10.000 đ</a> </p>
-
-                    </form>
+                       <label for="inputLoop">Amount Bid</label> 
+                        <input type="number" name ="BidAmount"  value={{this.products.StartPricce}} min={{this.products.StartPricce}}  step={{this.products.Step}}/>
+                        {{!-- <input step={{Step}} data-step-max="10" type="number" name="BidAmount" id="inputLoop" value={{StartPricce}} data-decimals="0" min={{StartPricce}} /></p> --}}
+                        <p>Step:<a style="color:#8AD8CE; font-size:20px">&ensp; {{this.products.Step}}</a> </p>
+                       
+      
 
                 </div>
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="submit" class="btn cus_btn btn-info" data-dismiss="modal">Confirm</button>
+                    <button type="submit" class="btn cus_btn btn-info" >Confirm</button>
                 </div>
 
             </div>
         </div>
-    </div>
+    </div> 
+</form>
     <!---->
 
     <div class="row">
@@ -434,6 +456,10 @@
         $myFormatForView = date("m/d/y g:i A", $time);
     </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-input-spinner@1.13.3/src/bootstrap-input-spinner.min.js"></script>
+<script>
+        $("input[type='number']").inputSpinner()
+</script>
 </body>
 
 </html>
