--- a/src/views/_layouts/main.hbs
+++ b/src/views/_layouts/main.hbs
@@ -126,9 +126,9 @@ background-color: rgb(222, 223, 224);
               <a class="dropdown-item" href="/user/selling">Selling</a>
               <a class="dropdown-item" href="/user/sold">SOLD</a>
                {{!-- {{/if}} --}}
-              <a class="dropdown-item" href="/user/information">Information</a>
-              {{!-- <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> --}}
-              <a class="dropdown-item" href="home_login.html">Log out</a>
+              <a class="dropdown-item" href="javascript: $('#frmLogout').submit();"> 
+              {{!-- <a class="dropdown-item" href="home_login.html"> --}}
+                Log out</a>
             </div>
           </li>
                      {{else}}
@@ -174,6 +174,7 @@ background-color: rgb(222, 223, 224);
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  
    {{{_sections.js}}}
 </body>
 
