them danh gia bidder, danh gia seller

--- a/src/views/vwAboutUser/biddinglist.hbs
+++ b/src/views/vwAboutUser/biddinglist.hbs
@@ -28,7 +28,7 @@
         <th scope="col">BuyDate</th>
         <th scope="col">EndDate</th>
         <th scope="col">Seller</th>
-        <th scope="col">Start Price</th>
+        <th scope="col">Current Price</th>
         <th scope="col">BIN</th>
         <th scope="col">Step</th>
 
@@ -48,7 +48,7 @@
         <td>{{BuyDate}}</td>
         <td>{{EndDate}}</td>
         <td>{{UserName}}</td>
-        <td>{{StartPricce}}</td>
+        <td>{{BidAmount}}</td>
         <td>{{BIN}}</td>
         <td>{{Step}}</td>
       </tr>
@@ -63,7 +63,7 @@
         <td>{{BuyDate}}</td>
         <td>{{EndDate}}</td>
         <td>{{UserName}}</td>
-        <td>{{StartPricce}}</td>
+        <td>{{BidAmount}}</td>
         <td>{{BIN}}</td>
         <td>{{Step}}</td>
       </tr>
