--- a/src/views/vwAboutUser/wonlist.hbs
+++ b/src/views/vwAboutUser/wonlist.hbs
@@ -27,9 +27,9 @@
         <th scope="col">BuyDate</th>
         <th scope="col">EndDate</th>
         <th scope="col">Seller</th>
-        <th scope="col">Start Price</th>
-        <th scope="col">BIN</th>
-        <th scope="col">Step</th>
+        <th scope="col">Won Price</th>
+        <th scope="col">Like</th>
+        <th scope="col">DisLike</th>
 
         </th>
       </tr>
@@ -45,9 +45,17 @@
         <td>{{BuyDate}}</td>
         <td>{{EndDate}}</td>
         <td>{{UserName}}</td>
-        <td>{{StartPricce}}</td>
-        <td>{{BIN}}</td>
-        <td>{{Step}}</td>
+        <td>{{BidAmount}}</td>
+        <td>
+          <a class="btn btn-primary" style="float:right" href="/user/wonlist/like/{{Seller}}">
+            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+          </a>
+        </td>
+        <td>
+            <a class="btn btn-primary" style="float:right" href="/user/wonlist/dislike/{{Seller}}">
+            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+          </a>
+        </td>
         <td>
 
           {{!-- <form class="form-inline " action="/user/{{authUser.UserID}}/watchlist/delete/{{ProductID}}" method="POST">
