--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -4,7 +4,7 @@
     Home
   </h4>
  <div class="card-body">
-    <h5>Best sellers </h5>
+    <h5>Top 5 most popular products </h5>
     <div class="row">
      
       {{#each this.products}}
@@ -13,7 +13,7 @@
           <img src="/imgs/sp/{{ProductID}}/main_thumbs.jpg" alt="{{NameProduct}}" title="{{NameProduct}}"
             class="card-img-top">
           <div class="card-body">
-            <a href='/categories/products/{{ProductID}}' class="cus_brand text-dark">
+            <a href="/categories/products/{{ProductID}}" class="cus_brand text-dark">
               <a class="card-title">{{NameProduct}}</a>
             </a>
 
@@ -31,7 +31,7 @@
     </div>
 
     {{!--  --}}
-    <h5>Best sellers 2</h5>
+    <h5>Top 5 highest auction products</h5>
     <div class="row">
      
       {{#each this.products2}}
@@ -40,7 +40,7 @@
           <img src="/imgs/sp/{{ProductID}}/main_thumbs.jpg" alt="{{NameProduct}}" title="{{NameProduct}}"
             class="card-img-top">
           <div class="card-body">
-            <a href='/categories/products/{{ProductID}}' class="cus_brand text-dark">
+            <a href="/categories/products/{{ProductID}}" class="cus_brand text-dark">
               <a class="card-title">{{NameProduct}}</a>
             </a>
 
@@ -58,7 +58,7 @@
       {{/each}}
     </div>
     {{!--  --}}
-        <h5>Best sellers 3</h5>
+        <h5>Top 5 products</h5>
     <div class="row">
      
       {{#each this.products3}}
@@ -67,7 +67,7 @@
           <img src="/imgs/sp/{{ProductID}}/main_thumbs.jpg" alt="{{NameProduct}}" title="{{NameProduct}}"
             class="card-img-top">
           <div class="card-body">
-            <a href='/categories/products/{{ProductID}}' class="cus_brand text-dark">
+            <a href="/categories/products/{{ProductID}}" class="cus_brand text-dark">
               <a class="card-title">{{NameProduct}}</a>
             </a>
 
